# Project-Lexora

./: .dockerignore  .env.example  .gitignore  .travis.yml  CI_CD_QUICKSTART.md  CURRENT_STATUS.md  Dockerfile  MANIFEST.in  QUICK_START.md  README.md  TRAVIS_CI_SETUP.md  app.py  docker-compose.yml  get_embedding_function.py  netlify.toml  populate_database.py  pyproject.toml  query_data.py  requirements.txt  setup.py
.github/workflows/: ci-cd.yml
docs/: ARCHITECTURE.md  COMPLETE_STRUCTURE.md  FLASK_GUI_GUIDE.md  PROJECT_STRUCTURE.md  TESTING_GUIDE.md  USAGE_GUIDE.md
scripts/: deploy.sh  populate_database.py  query.py  setup-travis.py  setup-travis.sh
src/: __init__.py
src/core/: __init__.py  query_engine.py  rag_pipeline.py
src/database/: __init__.py  chroma_manager.py  vector_store.py
src/models/: __init__.py  embedding_factory.py  llm_factory.py
src/utils/: __init__.py  config_loader.py  logger.py
static/: script.js  style.css
templates/: index.html
tests/: test_rag.py
